remove bad value in app.config

--- a/S3PrepTask/App.config
+++ b/S3PrepTask/App.config
@@ -2,7 +2,7 @@
 <configuration>
   <appSettings>
     <add key="AWSAccessKey" value=""/>
-    <add key="AWSSecretKey" value="I" />
+    <add key="AWSSecretKey" value="" />
     <add key="AWSBucket" value="" />
     <add key="AWSUploaderPath" value="uploader/"/>
   </appSettings>
